# jp-adult-compliance-classifier

./: .gitignore  MODEL_CARD.md  README.md  RELEASE.md  pyproject.toml  requirements.txt
docs/: DATASET.md  USAGE.md
examples/: stage2_manifest.example.json  yolo_data.example.yaml
scripts/: build_release_assets.py  predict_image.py  train_stage2_twostream.py  train_yolo_seg.py  validate_yolo_dataset.py
src/mosaic_uncensored_classifier/: __init__.py  twostream.py
