[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic-uncensored-classifier"
version = "0.1.0"
description = "Training-only code for mosaic/uncensored adult-region classifiers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "ultralytics>=8.2",
  "opencv-python>=4.9",
  "pillow>=10.0",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]
